--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
   display: grid;
-  min-height: 100%;
-  /* background-color: #2b2b2b; */
+  min-height: 97vh;
+  background-color: #2b2b2b;
+  justify-content: center;
+  align-content: center;
 }
 
 audio {
@@ -10,8 +12,22 @@ audio {
 
 button {
   display: none;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #e2e2e2;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.9;
 }
 
 .visible {
   display: block;
+}
+
+svg {
+  width: 150px;
+  height: 150px;
 }
